fixed bug where video player size was too low for some anime

--- a/client/src/components/Pages/AnimePlayerPage.css
+++ b/client/src/components/Pages/AnimePlayerPage.css
@@ -1,7 +1,3 @@
-.animeplayer-container {
-  width: fit-content;
-  margin-top: 70px;
-}
 @media screen and (min-width: 1450px) {
   .animeplayer-container {
     max-width: 68vw;
